# GREGoR_AnVIL_automation

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ignore_warning.py  logging_config.yaml  pyproject.toml  pytest-config.yaml  pytest.ini  setup.cfg  template.config.yaml
gregor_anvil_automation/: __main__.py  short_reads.py  validate.py
gregor_anvil_automation/short_reads/: validate.py
gregor_anvil_automation/utils/: email.py  email_text.py  env.py  exceptions.py  issue.py  mappings.py  schema.py  types.py  utils.py  working_dir.py
gregor_anvil_automation/validation/: checks.py  sample.py  schema.py  table.py  validator.py  workflow.txt
gregor_anvil_automation/validation/schemas/: aligned_dna_short_read.yaml  aligned_nanopore.yaml  aligned_pac_bio.yaml  aligned_rna_short_read.yaml  analyte.yaml  experiment_dna_short_read.yaml  experiment_nanopore.yaml  experiment_pac_bio.yaml  experiment_rna_short_read.yaml  family.yaml  genetic_findings.yaml  participant.yaml  phenotype.yaml
src/: __main__.py
src/validation/schemas/: participant.yaml
tests/: conftest.py  pyproject.toml
tests/short_reads/: test_validate.py
tests/short_reads/test_files/: metadata_file_many_samples.csv  metadata_file_one_sample.csv
tests/utils/: test_email.py  test_env.py  test_utils.py
tests/utils/test_files/: analyte_control.tsv  analyte_result.tsv  email_control.csv  family_control.tsv  family_result.tsv  issues_control.csv  issues_result.csv  participant_control.tsv  participant_result.tsv  valid_env_file.env
tests/validation/: test_check_uniqueness.py  test_checks.py
(+11 files in other folders)
