# Anytime you change anything in this file, you should at least re-run:
# `pip install -e .`

[metadata]
# The distribution name (pip):
name = gregor_anvil_automation
version = attr: gregor_anvil_automation.__version__
author = Submissions Group
author_email = hgsc-submit@hgsc.bcm.tmc.edu
description = Submissions automation for the GREGoR AnVIL
long_description = file:README.md
url = https://github.com/BCM-HGSC
license = MIT
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
# The package names (import):
python_requires = >=3.10

packages = find:

# Demonstration dependency
install_requires =
    addict == 2.3.0
    cerberus
    openpyxl
    black
    pylint
    pre-commit
    pyyaml

[options.extras_require]
dev=
    pytest

[options.entry_points]
console_scripts =
    gregor_submit = gregor_anvil_automation.__main__:main

[bdist_wheel]
universal = 1
